<resources>
    <string name="app_name">OpenGLES_Learning</string>
    <string name="not_support_es2_tips">This device does not support OpenGL ES 2.0</string>
    <string name="first_gl">First GL</string>
    <string name="air_hockey_1">AirHockey1</string>
    <string name="air_hockey_2">AirHockey2</string>
    <string name="air_hockey_3">AirHockey3</string>
    <string name="air_hockey_3d">AirHockey3D</string>
    <string name="air_hockey_3d_2">AirHockey3D_2</string>
    <string name="air_hockey_texture">AirHockey_Texture</string>
</resources>
