<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_first_gl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/first_gl"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_air_hockey1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/air_hockey_1"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_air_hockey2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/air_hockey_2"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_air_hockey3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/air_hockey_3"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_air_hockey3d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/air_hockey_3d"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_air_hockey3d2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/air_hockey_3d_2"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="2dp" />

</LinearLayout>